[gd_scene load_steps=4 format=3 uid="uid://cas7mo1hv4lce"]

[ext_resource type="LabelSettings" uid="uid://bajx05h532tfb" path="res://GameFiles/Dialogue/test_dialog_label_settings.tres" id="1_nvsrq"]
[ext_resource type="Script" uid="uid://d4fq4v1ji7ulf" path="res://GameFiles/Dialogue/text_box.gd" id="1_vp41y"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vp41y"]
bg_color = Color(0.453372, 0.39047, 0.178892, 0.447059)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.0324507, 0.0516567, 0.00460079, 1)

[node name="TextBox" type="CanvasLayer"]
script = ExtResource("1_vp41y")

[node name="TextboxContainer" type="MarginContainer" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -873.0
offset_top = -430.0
offset_right = 874.0
offset_bottom = -126.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 4
size_flags_vertical = 10

[node name="Panel" type="Panel" parent="TextboxContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_vp41y")

[node name="Textbox" type="MarginContainer" parent="TextboxContainer/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -873.5
offset_top = -152.0
offset_right = 873.5
offset_bottom = 152.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="Panel" type="Panel" parent="TextboxContainer/Panel/Textbox"]
visible = false
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="TextboxContainer/Panel/Textbox"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="TextboxContainer/Panel/Textbox/HBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
alignment = 2

[node name="Img" type="TextureRect" parent="TextboxContainer/Panel/Textbox/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Name" type="Label" parent="TextboxContainer/Panel/Textbox/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Name"
label_settings = ExtResource("1_nvsrq")
horizontal_alignment = 1

[node name="DialogBox" type="Label" parent="TextboxContainer/Panel/Textbox/HBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
text = "This is a placeholder. Fear is the mind killer."
label_settings = ExtResource("1_nvsrq")
autowrap_mode = 3
clip_text = true

[node name="EndText" type="Label" parent="TextboxContainer/Panel/Textbox/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
text = "V"
label_settings = ExtResource("1_nvsrq")
